src/routes/snapshots/wallet_live__routes__api__tests__list_assets.snap
---
source: src/routes/api.rs
expression: assets
---
{
  "assets": [
    {
      "id": 1,
      "user_id": 1,
      "name": "Bitcoin",
      "ticker": "BTC",
      "asset_class": "crypto",
      "quantity": "2.00000000",
      "average_price": "5.00",
      "current_price": "10.00",
      "currency": "USD",
      "total_value": "20.0000000000"
    }
  ],
  "total_value": "20.0000000000"
}
