src/routes/snapshots/wallet_live__routes__api__tests__update_asset.snap
---
source: src/routes/api.rs
expression: updated_asset
---
{
  "id": 1,
  "user_id": 1,
  "name": "Ethereum",
  "ticker": "ETH",
  "asset_class": "crypto",
  "quantity": "3.00000000",
  "average_price": "7.00",
  "current_price": "20.00",
  "currency": "USD",
  "total_value": "60.0000000000"
}
